Fix jump links color

--- a/wagtailio/static/css/pages/services.scss
+++ b/wagtailio/static/css/pages/services.scss
@@ -113,6 +113,8 @@
       font-size: 18px;
       font-weight: bold;
 
+      color: $color--deep-indigo;
+
       li  {
         margin-bottom: 23px;
 
